--- a/css/app.css
+++ b/css/app.css
@@ -1,17 +1,32 @@
+html{
+  box-sizing: border-box;
+}
+*,*::before, *:after{
+  box-sizing: inherit;
+}
 
+/* Box Model */
 .sobre-nosotros{
  background-color: bisque;
  width: 200px;
  padding: 25px;
- box-sizing:border-box ;
-
+}
+/** Header y Navegacion **/
+.nombre-sitio {
+ padding-top: 100px;
+  padding-bottom: 100px;
 }
 
+
+
+
+/*
 h1 {
   font-size: 20px;
-  /*color: green;*/
+ 
   color: #000;
 }
+*/
 
 
 
